infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manging-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-manging-auth
  template:
    metadata:
      labels:
        app: task-manging-auth
    spec:
      containers:
      - name: task-manging-auth
        image: rohanpagare75/task-manging-auth
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: task-manging-auth-srv
spec:
  selector:
    app: task-manging-auth
  ports:
    - name: task-manging-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
