infra/k8s/board-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manging-board
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-manging-board
  template:
    metadata:
      labels:
        app: task-manging-board
    spec:
      containers:
      - name: task-manging-board
        image: rohanpagare75/task-manging-board
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: task-manging-board-srv
spec:
  selector:
    app: task-manging-board
  ports:
    - name: task-manging-board
      protocol: TCP
      port: 3000
      targetPort: 3000
