infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: task-manging.dev
      http:
        paths:
          - path: /api/user/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: task-manging-auth-srv
                port:
                  number: 3000
          - path: /api/board/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: task-manging-board-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: task-manging-client-srv
                port:
                  number: 80
